apply plugin: "jacoco"
apply plugin: 'java'
apply plugin: 'war'

group = 'com.app'
version = '1.0'

description = "eBay Webapp"

sourceCompatibility = 1.7
targetCompatibility = 1.7

dependencies {
	compile files('lib/ebaycalls.jar')
	compile files('lib/ebaysdkcore.jar')
	compile files('lib/finding.jar')
	compile group: 'com.sendgrid', name: 'sendgrid-java', version:'2.2.2'
	compile group: 'com.stripe', name: 'stripe-java', version:'2.6.0'
	compile group: 'javax.mail', name: 'mail', version:'1.4.7'
	compile group: 'javax.validation', name: 'validation-api', version:'1.1.0.Final'
	compile group: 'joda-time', name: 'joda-time', version:'2.7'
	compile group: 'jstl', name: 'jstl', version:'1.2'
	compile group: 'mysql', name: 'mysql-connector-java', version:'5.1.36'
	compile group: 'net.sf.ehcache', name: 'ehcache', version:'2.10.2'
	compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.0'
	compile group: 'org.apache.shiro', name: 'shiro-core', version:'1.2.4'
	compile group: 'org.apache.shiro', name: 'shiro-spring', version:'1.2.4'
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.4'
	compile group: 'org.freemarker', name: 'freemarker', version:'2.3.24-incubating'
	compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.7'
	compile group: 'org.slf4j', name: 'slf4j-log4j12', version:'1.7.7'
	compile group: 'org.springframework', name: 'spring-context', version:'4.1.2.RELEASE'
	compile group: 'org.springframework', name: 'spring-context-support', version:'4.1.2.RELEASE'
	compile group: 'org.springframework', name: 'spring-jdbc', version:'4.1.2.RELEASE'
	compile group: 'org.springframework', name: 'spring-test', version:'4.1.2.RELEASE'
	compile group: 'org.springframework', name: 'spring-web', version:'4.1.2.RELEASE'
	compile group: 'org.springframework', name: 'spring-webmvc', version:'4.1.2.RELEASE'
	compile group: 'log4j', name: 'log4j', version:'1.2.16'
	providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.0.1'
	testCompile group: 'cglib', name: 'cglib-nodep', version: '3.2.0'
	testCompile group: 'junit', name: 'junit', version:'4.11'
	testCompile group: 'org.hamcrest', name: 'hamcrest-all', version:'1.3'
	testCompile group: 'org.javassist', name: 'javassist', version: '3.20.0-GA'
	testCompile group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
	testCompile group: 'org.objenesis', name: 'objenesis', version: '2.2'
	testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.4'
	testCompile group: 'org.powermock', name: 'powermock-api-support', version: '1.6.4'
	testCompile group: 'org.powermock', name: 'powermock-core', version: '1.6.4'
	testCompile group: 'org.powermock', name: 'powermock-module-javaagent', version: '1.6.4'
	testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.4'
	testCompile group: 'org.powermock', name: 'powermock-module-junit4-common', version: '1.6.4'
	testCompile group: 'org.powermock', name: 'powermock-module-junit4-rule-agent', version: '1.6.4'
	testCompile group: 'org.powermock', name: 'powermock-reflect', version: '1.6.4'
}

repositories {
	 maven { url "http://repo.maven.apache.org/maven2" }
}

sourceSets {
	main {
		java {
			srcDir 'src/java'
		}
	}
	test {
		java {
			srcDir 'src/test'
		}
	}
}

test {
	systemProperties System.getProperties()

	jvmArgs '-XX:-UseSplitVerifier'
	jvmArgs '-XX:MaxPermSize=512m'

	jacoco {
		append = false
		destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
		classDumpFile = file("$buildDir/jacoco/classpathdumps")
	}
}

war {
	archiveName "ROOT.war"
}